# circuit-solver-algorithms

./: .gitignore  Cargo.toml  README.md  TODO.txt  package.json  publish.sh
.github/workflows/: ci.yml
.run/: Build.run.xml  Integration Test.run.xml  Test.run.xml  Unit Test.run.xml  start.run.xml
pkg/: README.md  package.json
src/: component.rs  components.rs  container.rs  controller.rs  elements.rs  helpers.rs  interfaces.rs  intermediaries.rs  lib.rs  math.rs  operations.rs  partial_container.rs  simplification.rs  solution.rs  solvers.rs  test_support.rs  tests.rs  tools.rs  util.rs  validation.rs
src/solvers/: mesh_matrix_solver.rs  mesh_step_solver.rs  mod.rs  node_matrix_solver.rs  node_step_solver.rs  solver.rs
tests/: Cargo.toml  compare_test_case.rs  tests.rs  wasm.rs
tests/data/: basic_container.json  validatable_containers.json
tests/data/126f41cf1ddfb40d7b60674205a9099aa3b9ca4c/: container_126f41cf1ddfb40d7b60674205a9099aa3b9ca4c.json  steps_126f41cf1ddfb40d7b60674205a9099aa3b9ca4c.json
tests/data/1a0c09465f83e78cdefe611c879b31bb012f5a56/: container_1a0c09465f83e78cdefe611c879b31bb012f5a56.json
tests/data/523be6d09decde5b1b0c6fbd96114474b53f56f3/: errors_523be6d09decde5b1b0c6fbd96114474b53f56f3.json
tests/data/a4a8b2cc7646b6c8902a5141a858e6aeeb7e6472/: container_a4a8b2cc7646b6c8902a5141a858e6aeeb7e6472.json  errors_a4a8b2cc7646b6c8902a5141a858e6aeeb7e6472.json
tests/data/ac5a98cf3af3900755000a497624a6d62c1398f8/: container_ac5a98cf3af3900755000a497624a6d62c1398f8.json
tests/data/case_1/: input.json  output.json  result.json
tests/data/mna_container/: input.json  output.json
tests/src/: compare_test_case.rs  lib.rs  wasm_tests.rs
