[package]
name = "circuit-solver-algorithms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
wasm-bindgen = { version = "0.2.86", features = ["serde-serialize"] }
serde-wasm-bindgen = "0.5.0"

[dev-dependencies]
assert-json-diff = "2.0.2"
regex = "1"