[package]
name = "circuit-solver-algorithms"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
serde = { version = "1.0.163", features = ["derive", "rc"] }
serde_json = "1.0.96"
wasm-bindgen = { version = "0.2.86", features = ["serde-serialize"] }
serde-wasm-bindgen = "0.5.0"
petgraph = "0.6.3"
rustworkx-core = "0.13.0"
getrandom = { version = "0.2", features = ["js"] }
ndarray = "0.15.6"
wasm-bindgen-test = "0.3.0"
num-traits = "0.2.15"
js-sys = "0.3.64"
operations = { path = "../operations" }

[dev-dependencies]
serde-wasm-bindgen = "0.5.0"
assert-json-diff = "2.0.2"
regex = "1"
